force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
  <label>Room</label>
  <pluralLabel>Rooms</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Room #</label>
    <displayFormat>RM-{00000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>