force-app/main/default/objects/Room__c/fields/Aircon__c.field-meta.xml
<CustomField>
  <fullName>Aircon__c</fullName>
  <label>Aircon</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>