force-app/main/default/objects/Room__c/fields/Has_Private_Bathroom__c.field-meta.xml
<CustomField>
  <fullName>Has_Private_Bathroom__c</fullName>
  <label>Has Private Bathroom</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>