force-app/main/default/objects/Room__c/fields/Property__c.field-meta.xml
<CustomField>
  <fullName>Property__c</fullName>
  <label>Property</label>
  <referenceTo>Property__c</referenceTo>
  <relationshipLabel>Rooms</relationshipLabel>
  <relationshipName>Rooms</relationshipName>
  <type>MasterDetail</type>
</CustomField>